# railway-deployment

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  docker-compose.yml  pyproject.toml  railway.toml
api/: Dockerfile  auth.py  logging_config.py  main.py  pyproject.toml
api/routers/: auth.py  bot.py
api/services/: auth.py  bot.py
api/static/: app.js  index.html  style.css
bot/: Dockerfile  logging_config.py  main.py  pyproject.toml
bot/core/: trading_bot.py
bot/handlers/: command_handler.py  market_handler.py
bot/infrastructure/: redis_manager.py  shutdown_manager.py
web/: app.js  style.css
