[project]
name = "railway-deployment"
version = "0.1.0"
description = "Monorepo with two Python services: API and bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.0",
]

[tool.ruff]
fix = true
show-fixes = true

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
ignore = ["B008"]  # Allow Depends() in FastAPI function defaults
