[project]
name = "api"
version = "0.1.0"
description = "Trading Bot API Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.6.3",
    "fastapi>=0.116.1",
    "itsdangerous>=2.1.2",
    "python-multipart>=0.0.6",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "uvicorn>=0.35.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.12.12",
]
